Lots of little updates and fixes suggested by PMD.